# Verbex

./: .gitignore  404.html  CMakeLists.txt  EBNF  LICENSE  README.md  index.html
advanced/low-level/: index.html
advanced/performance/: index.html
apps/cli/: CMakeLists.txt  main.cpp
basics/control-flow/: index.html
basics/functions/: index.html
basics/variables/: index.html
core/: CMakeLists.txt
demo/: index.html
docs/: mkdocs.yml
docs/docs/: index.md  plan.md  repo.md
docs/docs/basics/: control-flow.md  functions.md  variables.md
docs/docs/internals/: llvm.md  overview.md
docs/docs/reference/: keywords.md  syntax.md
examples/: index.html
features/ast/: CMakeLists.txt  ast.cpp  ast.hpp
features/codegen/: CMakeLists.txt  codegen.cpp  codegen.hpp
features/diagnostics/: CMakeLists.txt  diagnostic.cpp  diagnostic.hpp
features/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
features/memory/: index.html
features/modules/: index.html
features/parser/: CMakeLists.txt  parser.cpp  parser.hpp
features/semantic/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
features/types/: index.html
getting-started/: index.html
include/Rivet/: AST.h  CodeGen.h  Lexer.h  Parser.h
internals/llvm/: index.html
internals/overview/: index.html
js/: base.js  darkmode.js
plan/: index.html
reference/keywords/: index.html
reference/syntax/: index.html
search/: lunr.js  main.js  search_index.json  worker.js
src/: AST.cpp  CodeGen.cpp  Lexer.cpp  Parser.cpp  main.cpp
stdlib/: index.html
tests/: CMakeLists.txt
tooling/: index.html
